--- a/component-side-bar-responsive.html
+++ b/component-side-bar-responsive.html
@@ -21,30 +21,57 @@
     <div class="side_bar">
         <a href="#" class="icon">
             <img src="./assets/images/sidebar/caf.png">
+            <span>
+                Nos Menus 
+            </span>
         </a>
         <a href="#" class="icon">
             <img src="./assets/images/sidebar/hamburger.png">
+            <span>
+                Nos Burgers 
+            </span>
         </a>
-        <a href="#" class="icon">
-            <img src="./assets/images/sidebar/icons8-frt.png">
+        <a href="# " class="icon ">
+            <img src="./assets/images/sidebar/icons8-frt.png ">
+            <span>
+                Nos Frittes 
+            </span>
         </a>
-        <a href="#" class="icon">
-            <img src="./assets/images/sidebar/icons8-kch.png">
+        <a href="# " class="icon ">
+            <img src="./assets/images/sidebar/icons8-kch.png ">
+            <span>
+             Nos Sauces 
+            </span>
         </a>
-        <a href="#" class="icon">
-            <img src="./assets/images/sidebar/icons8-mc.png">
+        <a href="# " class="icon ">
+            <img src="./assets/images/sidebar/icons8-mc.png ">
+            <span>
+                Nos Mc 
+            </span>
         </a>
-        <a href="#" class="icon">
-            <img src="./assets/images/sidebar/icons8-menu.png">
+        <a href="# " class="icon ">
+            <img src="./assets/images/sidebar/icons8-menu.png ">
+            <span>
+                Nos Menus 
+            </span>
         </a>
-        <a href="#" class="icon">
-            <img src="./assets/images/sidebar/icons8-soda.png">
+        <a href="# " class="icon ">
+            <img src="./assets/images/sidebar/icons8-soda.png ">
+            <span>
+                Nos Soda
+            </span>
         </a>
-        <a href="#" class="icon">
-            <img src="./assets/images/sidebar/icons8-wrap.png">
+        <a href="# " class="icon ">
+            <img src="./assets/images/sidebar/icons8-wrap.png ">
+            <span>
+                Nos Wrap
+            </span>
         </a>
-        <a href="#" class="icon">
-            <img src="./assets/images/sidebar/lettu.png">
+        <a href="# " class="icon ">
+            <img src="./assets/images/sidebar/lettu.png ">
+            <span>
+                Nos Salades
+            </span>
         </a>
     </div>
 
@@ -58,9 +85,7 @@
 
 
 
-    <script src="./assets/scripts/animate_section1.js"></script>
-    <script src="./assets/scripts/menu.js"></script>
-    <script src="./assets/scripts/audio_section2.js"></script>
+    <script src="./assets/scripts/sidebar.js "></script>
 
 </body>
 
