--- a/index.html
+++ b/index.html
@@ -122,74 +122,38 @@
                 width="600" height="280" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </section>
-    <section>
+    <section id="layers" class="layers">
+        <!-- changer le nom de la h3 pour  l'audio de ce qui est rechercher-->
 
-        <section id="layers" class="layers">
-            <!-- changer le nom de la h3 pour  l'audio de ce qui est rechercher-->
+        <h2>Pour célébrer cet événement, nous avons le plaisir de vous présenter les légendes du basket-ball Shaquille O'Neal, LeBron James et Michael Jordan.</h2>
+        <p>Shaquille O'Neal, également connu sous le nom de Shaq, est un ancien joueur de la NBA qui a marqué l'histoire du basket-ball avec ses performances exceptionnelles. LeBron James, l'un des meilleurs joueurs de l'histoire de la NBA, a remporté plusieurs
+            titres de champion avec les Cleveland Cavaliers, les Miami Heat et les Los Angeles Lakers. Michael Jordan, considéré comme l'un des plus grands joueurs de basket-ball de tous les temps, a remporté six championnats de la NBA au cours de sa
+            carrière exceptionnelle. Nous sommes excités de vous présenter notre nouvelle collaboration qui offrira une expérience inoubliable pour les fans de la NBA et de McDonald's. Restez à l'écoute pour plus d'informations sur les prochains événements
+            et produits! Cordialement, L'équipe NBA & McDonald's.</p>
 
-            <h2>Pour célébrer cet événement, nous avons le plaisir de vous présenter les légendes du basket-ball Shaquille O'Neal, LeBron James et Michael Jordan.</h2>
-            <p>Shaquille O'Neal, également connu sous le nom de Shaq, est un ancien joueur de la NBA qui a marqué l'histoire du basket-ball avec ses performances exceptionnelles. LeBron James, l'un des meilleurs joueurs de l'histoire de la NBA, a remporté
-                plusieurs titres de champion avec les Cleveland Cavaliers, les Miami Heat et les Los Angeles Lakers. Michael Jordan, considéré comme l'un des plus grands joueurs de basket-ball de tous les temps, a remporté six championnats de la NBA au
-                cours de sa carrière exceptionnelle. Nous sommes excités de vous présenter notre nouvelle collaboration qui offrira une expérience inoubliable pour les fans de la NBA et de McDonald's. Restez à l'écoute pour plus d'informations sur les
-                prochains événements et produits! Cordialement, L'équipe NBA & McDonald's.</p>
-
-            <div class="row">
-                <div class="layers-col">
-                    <img class="img-layers" src="./assets/images/antony.jpeg">
-                    <div class="layer">
-                        <h3>Antony davis</h3>
-                    </div>
-                </div>
-                <div class="layers-col">
-                    <img class="img-layers" src="./assets/images/lebron.jpeg">
-                    <div class="layer">
-                        <h3>Lebron James </h3>
-                    </div>
-                </div>
-                <div class="layers-col">
-                    <img class="img-layers" src="./assets/images/mick.jpeg">
-                    <div class="layer">
-                        <h3>Mickal Jordan </h3>
-                    </div>
+        <div class="row">
+            <div class="layers-col">
+                <img class="img-layers" src="./assets/images/antony.jpeg">
+                <div class="layer">
+                    <h3>Antony davis</h3>
                 </div>
             </div>
-
-
-        </section>
-        <!-- test col in first section
-
-            <div class="row ">
-                <div class="col-2 ">
-                    <button class="button.secondary ">
-                Subscribe
-                </button>
-                        <a class="link " href="https://www.youtube.com/channel/UCcBaoqamP8pn9_sJIyL8ULQ "> Test</a>
-                        <p class="p-italic "> lorem ipsum</p>
+            <div class="layers-col">
+                <img class="img-layers" src="./assets/images/lebron.jpeg">
+                <div class="layer">
+                    <h3>Lebron James </h3>
+                </div>
             </div>
-            <div class="col-2 ">
-                <button class="button.secondary ">
-                Subscribe
-                </button>
-                <a class="link " href="https://www.youtube.com/channel/UCcBaoqamP8pn9_sJIyL8ULQ "> Test</a>
-                <p class="p-italic "> lorem ipsum</p>
+            <div class="layers-col">
+                <img class="img-layers" src="./assets/images/mick.jpeg">
+                <div class="layer">
+                    <h3>Mickal Jordan </h3>
+                </div>
             </div>
-            <div class="col-2 ">
-                <button class="button.secondary ">
-                Subscribe
-                </button>
-                <a class="link " href="https://www.youtube.com/channel/UCcBaoqamP8pn9_sJIyL8ULQ "> Test</a>
-                <p class="p-italic "> lorem ipsum</p>
-            </div>
+        </div>
 
-            </div>
-            -->
-        <!-- contenu de la première section -->
     </section>
 
-
-    <section>
-        <!-- contenu de la deuxième section -->
-    </section>
 
     <section>
         <!-- contenu de la troisième section -->
