start building Design gui

--- a/DesignGui/component-form.html
+++ b/DesignGui/component-form.html
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6721551398549890" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="./assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
 
 
@@ -19,7 +19,7 @@
     <div class="form-connexion">
         <div class="form-connexion-content">
             <div class="form-connexion-logo">
-                <img src="./assets/images/logo_s1.png" alt="logo">
+                <img src="../assets/images/logo_s1.png" alt="logo">
             </div>
             <div class="form-connexion-header">
                 <h1>Se connecter</h1>
@@ -54,8 +54,8 @@
             </div>
         </div>
     </div>
-    <script src="./assets/js/main.js"></script>
-    <script src="./assets/scripts/form.js"></script>
+    <script src="../assets/js/main.js"></script>
+    <script src="../assets/scripts/form.js"></script>
 
 
 </body>
