--- a/DesignGui/component-layer.html
+++ b/DesignGui/component-layer.html
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6721551398549890" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="./assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
 
 
@@ -29,19 +29,19 @@
 
         <div class="row">
             <div class="layers-col">
-                <img class="img-layers" src="./assets/images/antony.jpeg">
+                <img class="img-layers" src="../assets/images/antony.jpeg">
                 <div class="layer">
                     <h3>Antony davis</h3>
                 </div>
             </div>
             <div class="layers-col">
-                <img class="img-layers" src="./assets/images/lebron.jpeg">
+                <img class="img-layers" src="../assets/images/lebron.jpeg">
                 <div class="layer">
                     <h3>Lebron James </h3>
                 </div>
             </div>
             <div class="layers-col">
-                <img class="img-layers" src="./assets/images/mick.jpeg">
+                <img class="img-layers" src="../assets/images/mick.jpeg">
                 <div class="layer">
                     <h3>Mickal Jordan </h3>
                 </div>
@@ -56,19 +56,19 @@
 
     <div class="row">
         <div class="layers-col">
-            <img class="img-layers" src="./assets/images/antony.jpeg">
+            <img class="img-layers" src="../assets/images/antony.jpeg">
             <div class="layer">
                 <h3>Antony davis</h3>
             </div>
         </div>
         <div class="layers-col">
-            <img class="img-layers" src="./assets/images/lebron.jpeg">
+            <img class="img-layers" src="../assets/images/lebron.jpeg">
             <div class="layer">
                 <h3>Lebron James </h3>
             </div>
         </div>
         <div class="layers-col">
-            <img class="img-layers" src="./assets/images/mick.jpeg">
+            <img class="img-layers" src="../assets/images/mick.jpeg">
             <div class="layer">
                 <h3>Mickal Jordan </h3>
             </div>
@@ -79,14 +79,14 @@
     <!-- seulement la div-->
 
     <div class="layers-col">
-        <img class="img-layers" src="./assets/images/mick.jpeg">
+        <img class="img-layers" src="../assets/images/mick.jpeg">
         <div class="layer">
             <h3>Mickal Jordan </h3>
         </div>
     </div>
 
-    <script src="./assets/js/main.js"></script>
-    <script src="./assets/scripts/form.js"></script>
+    <script src="../assets/js/main.js"></script>
+    <script src="../assets/scripts/form.js"></script>
 
 
 </body>
