--- a/DesignGui/component-side-bar-responsive.html
+++ b/DesignGui/component-side-bar-responsive.html
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6721551398549890" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="./assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
 
 
@@ -20,55 +20,55 @@
 
     <div class="side_bar">
         <a href="#" class="icon">
-            <img src="./assets/images/sidebar/caf.png">
+            <img src="../assets/images/sidebar/caf.png">
             <span>
                 Nos Menus 
             </span>
         </a>
         <a href="#" class="icon">
-            <img src="./assets/images/sidebar/hamburger.png">
+            <img src="../assets/images/sidebar/hamburger.png">
             <span>
                 Nos Burgers 
             </span>
         </a>
         <a href="# " class="icon ">
-            <img src="./assets/images/sidebar/icons8-frt.png ">
+            <img src="../assets/images/sidebar/icons8-frt.png ">
             <span>
                 Nos Frittes 
             </span>
         </a>
         <a href="# " class="icon ">
-            <img src="./assets/images/sidebar/icons8-kch.png ">
+            <img src="../assets/images/sidebar/icons8-kch.png ">
             <span>
              Nos Sauces 
             </span>
         </a>
         <a href="# " class="icon ">
-            <img src="./assets/images/sidebar/icons8-mc.png ">
+            <img src="../assets/images/sidebar/icons8-mc.png ">
             <span>
                 Nos Mc 
             </span>
         </a>
         <a href="# " class="icon ">
-            <img src="./assets/images/sidebar/icons8-menu.png ">
+            <img src="../assets/images/sidebar/icons8-menu.png ">
             <span>
                 Nos Menus 
             </span>
         </a>
         <a href="# " class="icon ">
-            <img src="./assets/images/sidebar/icons8-soda.png ">
+            <img src="../assets/images/sidebar/icons8-soda.png ">
             <span>
                 Nos Soda
             </span>
         </a>
         <a href="# " class="icon ">
-            <img src="./assets/images/sidebar/icons8-wrap.png ">
+            <img src="../assets/images/sidebar/icons8-wrap.png ">
             <span>
                 Nos Wrap
             </span>
         </a>
         <a href="# " class="icon ">
-            <img src="./assets/images/sidebar/lettu.png ">
+            <img src="../assets/images/sidebar/lettu.png ">
             <span>
                 Nos Salades
             </span>
@@ -85,7 +85,7 @@
 
 
 
-    <script src="./assets/scripts/sidebar.js "></script>
+    <script src="../assets/scripts/sidebar.js "></script>
 
 </body>
 
