--- a/DesignGui/component-without-live.html
+++ b/DesignGui/component-without-live.html
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6721551398549890" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="./assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
 
 
@@ -19,7 +19,7 @@
 
 
     <div class="card">
-        <img src="./assets/images/slider1.png" alt="image de burgers">
+        <img src="../assets/images/slider1.png" alt="image de burgers">
         <span class="article_name">
            Big Mac
         </span>
@@ -28,7 +28,7 @@
         </span>
     </div>
     <div class="card">
-        <img src="./assets/images/slider1.png" alt="image de burgers">
+        <img src="../assets/images/slider1.png" alt="image de burgers">
         <span class="article_name">
            Big Mac
         </span>
@@ -37,7 +37,7 @@
         </span>
     </div>
     <div class="card">
-        <img src="./assets/images/slider1.png" alt="image de burgers">
+        <img src="../assets/images/slider1.png" alt="image de burgers">
         <span class="article_name">
            Big Mac
         </span>
@@ -54,9 +54,9 @@
 
 
 
-    <script src="./assets/scripts/animate_section1.js"></script>
-    <script src="./assets/scripts/menu.js"></script>
-    <script src="./assets/scripts/audio_section2.js"></script>
+    <script src="../assets/scripts/animate_section1.js"></script>
+    <script src="../assets/scripts/menu.js"></script>
+    <script src="../assets/scripts/audio_section2.js"></script>
 
 </body>
 
