--- a/DesignGui/layout-navbar.html
+++ b/DesignGui/layout-navbar.html
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6721551398549890" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="./assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
 
 
@@ -22,7 +22,7 @@
 
 
     <nav class="navbar">
-        <a href="./index.html"> <img class="logo" src="./assets/images/logo_s1.png" alt="logo"></a>
+        <a href="./index.html"> <img class="logo" src="../assets/images/logo_s1.png" alt="logo"></a>
         <div class="nav-link" id="navLink">
             <i class="fas fa-times" onclick="hideMenu()"></i>
             <ul>
