based for design ok

--- a/DesignGui/index.html
+++ b/DesignGui/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="design_gui">
-        <h1>Ma page d'accueil</h1>
+        <h1>Design GUI</h1>
         <a href="./component-form.html" onclick="loadPage('component-form.html'); return false;">Charger la page de test</a>
         <a href="./component-layer.html" onclick="loadPage('component-layer.html'); return false;">Charger le layer</a>
         <a href="./component-side-bar-responsive.html" onclick="loadPage('component-side-bar-responsive.html'); return false;">Charger le layer</a>
