build for card animate

--- a/DesignGui/index.html
+++ b/DesignGui/index.html
@@ -18,11 +18,13 @@
 <body>
     <div class="design_gui">
         <h1>Design GUI</h1>
-        <a href="./component-form.html" onclick="loadPage('component-form.html'); return false;">Charger la page de test</a>
-        <a href="./component-layer.html" onclick="loadPage('component-layer.html'); return false;">Charger le layer</a>
-        <a href="./component-side-bar-responsive.html" onclick="loadPage('component-side-bar-responsive.html'); return false;">Charger le layer</a>
-        <a href="./component-without-live.html" onclick="loadPage('component-without-live.html'); return false;">Charger le layer</a>
-        <a href="./layout-navbar.html" onclick="loadPage('layout-navbar.html'); return false;">Charger le layer</a>
+        <a href="./component-form.html" onclick="loadPage('component-form.html'); return false;">Formulaire</a>
+        <a href="./component-layer.html" onclick="loadPage('component-layer.html'); return false;">Layer</a>
+        <a href="./component-side-bar-responsive.html" onclick="loadPage('component-side-bar-responsive.html'); return false;">SideBar</a>
+        <a href="./component-without-live.html" onclick="loadPage('component-without-live.html'); return false;">Card</a>
+        <a href="./layout-navbar.html" onclick="loadPage('layout-navbar.html'); return false;">NavBar</a>
+        <a href="./component-animate_card.html" onclick="loadPage('component-animate_card.html'); return false;">Charger le layer</a>
+
     </div>
 
 
