build for card animate

--- a/DesignGui/component-animate_card.html
+++ b/DesignGui/component-animate_card.html
@@ -1,13 +1,3 @@
-<div class="animate_card-col" id="first-section" style="width:20%;">
-    <img src="../assets/images/slider1.png" alt="slider1" style="width:80%;">
-    <h3>Decouvrez nos inccontournables</h3>
-    <p>Lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolorLorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet sit amet</p>
-</div>
-<div class="animate_card-col" id="first-section" style="width:20%;">
-    <img src="../assets/images/slider1.png" alt="slider1" style="width:80%;">
-    <h3>Decouvrez nos inccontournables</h3>
-    <p>Lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolorLorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet sit amet</p>
-</div>
 <section id="animate_card" class="animate_card">
     <div class="animate_card-col" id="first-section">
         <img src="../assets/images/slider1.png" alt="slider1">
@@ -19,5 +9,11 @@
         <h3>Decouvrez nos inccontournables</h3>
         <p>Lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolorLorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet sit amet</p>
     </div>
+    <div class="animate_card-col" id="first-section">
+        <img src="../assets/images/slider1.png" alt="slider1">
+        <h3>Decouvrez nos inccontournables</h3>
+        <p>Lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolorLorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet sit amet</p>
+    </div>
 </section>
+
 <script src="../assets/scripts/animate_card.js"></script>
