design gui looking nice

--- a/DesignGui/index.html
+++ b/DesignGui/index.html
@@ -24,6 +24,8 @@
         <a href="./component-without-live.html" onclick="loadPage('component-without-live.html'); return false;">Card</a>
         <a href="./layout-navbar.html" onclick="loadPage('layout-navbar.html'); return false;">NavBar</a>
         <a href="./component-animate_card.html" onclick="loadPage('component-animate_card.html'); return false;">Charger le layer</a>
+        <a href="./component-button.html" onclick="loadPage('component-button.html'); return false;">Boutton</a>
+
 
     </div>
 
