update form look godd go request the others members

--- a/DesignGui/component-form.html
+++ b/DesignGui/component-form.html
@@ -1,40 +1,71 @@
-<div class="form-connexion">
-    <div class="form-connexion-content">
-        <div class="form-connexion-logo">
-            <img src="../assets/images/logo_s1.png" alt="logo">
-        </div>
-        <div class="form-connexion-header">
-            <h1>Se connecter</h1>
-        </div>
-        <div class="form-connexion-body">
-            <form action="#" method="POST">
-                <div class="form-connexion-input">
-                    <input type="email" name="email" id="email" placeholder="Email">
-                </div>
-                <div class="form-connexion-input">
-                    <span class="error"></span>
-                    <input type="password" name="password" id="password" placeholder="Mot de passe">
+<div class="row">
 
-                </div>
-                <div class="form-connexion-links">
-                    <a href="#">Mot de passe oublié ?</a>
-                    <div class="eye">
-                        <i class="fa fa-eye-slash" aria-hidden="true"></i>
+    <div class="form-connexion">
+        <div class="form-connexion-content">
+            <div class="form-connexion-logo">
+                <img src="../assets/images/logo_s1.png" alt="logo">
+            </div>
+            <div class="form-connexion-header">
+                <h1>Se connecter</h1>
+            </div>
+            <div class="form-connexion-body">
+                <form action="#" method="POST">
+                    <div class="form-connexion-input">
+                        <input type="email" name="email" id="email" placeholder="Email">
                     </div>
-                </div>
-                <div class="form-connexion-input-submit">
-                    <input type="submit" value="Se connecter" class="button-success">
-                </div>
-                <div class="form-connexion-input-submit">
-                    <span onclick="location='./inscription.html'">
+                    <div class="form-connexion-input">
+                        <span class="error"></span>
+                        <input type="password" name="password" id="password" placeholder="Mot de passe">
+
+                    </div>
+                    <div class="form-connexion-links">
+                        <a href="#">Mot de passe oublié ?</a>
+                        <div class="eye">
+                            <i class="fa fa-eye-slash" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                    <div class="form-connexion-input-submit">
+                        <input type="submit" value="Se connecter" class="button-success">
+                    </div>
+                    <div class="form-connexion-input-submit">
+                        <span onclick="location='./inscription.html'">
                         Vous n'avez pas de compte ?
                     </span>
-                    <a class="link" href="./inscription.html">Inscrivez vous</a>
+                        <a class="link" href="./inscription.html">Inscrivez vous</a>
 
-                </div>
-            </form>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
+    <!--
+    <div class="form-connexion" style="background: none;">
+        <div class="form-connexion-content">
+            <div class="form-connexion-header">
+                <h1>Se connecter</h1>
+            </div>
+            <div class="form-connexion-body">
+                <form action="#" method="POST">
+                    <div class="form-connexion-input">
+                        <input type="email" name="email" id="email" placeholder="Email">
+                    </div>
+                    <div class="form-connexion-input">
+                        <span class="error"></span>
+                        <input type="password" name="password" id="password" placeholder="Mot de passe">
+
+                    </div>
+                    <div class="form-connexion-links">
+                        <a href="#">Mot de passe oublié ?</a>
+                        <div class="eye">
+                            <i class="fa fa-eye-slash" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                    <div class="form-connexion-input-submit">
+                        <input type="submit" value="Se connecter" class="button-success">
+                    </div>
+
+                </form>
+            </div>
+        </div>
+    </div> -->
 </div>
-<script src="../assets/js/main.js"></script>
-<script src="../assets/scripts/form.js"></script>
