--- a/product.html
+++ b/product.html
@@ -16,65 +16,127 @@
 </head>
 
 <body>
+    <section class="header">
+        <nav class="navbar">
+            <a href="./index.html"> <img class="logo" src="./assets/images/logo_s1.png" alt="logo"></a>
+            <div class="nav-link" id="navLink">
+                <i class="fas fa-times" onclick="hideMenu()"></i>
+                <ul>
+                    <li>
+                        <a href="./index.html"> Nous restaurants</a>
+                    </li>
+                    <li>
+                        <a href="./product.html"> Nos produits </a>
+                    </li>
+                    <li>
+                        <a href="./blog.html"> Blog</a>
+                    </li>
+                    <li>
+                        <a href="#"> Contact</a>
+                    </li>
+                    <li>
+                        <a href="#cta"> |</a>
+                    </li>
+                    <li>
+                        <a href="#cta">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                        </a>
+                    </li>
+
+                    <button onclick="location.href='./connexion.html'" class="button-warning" id="button-nav">Se connecter</button>
+                    <button onclick="location.href='./commander.html'" class="button-success" id="button-nav">Commander</button>
+
+                </ul>
+            </div>
+            <div class="nav-user" id="navUser">
+                <i class="fas fa-times" onclick="hideCon()"></i>
+                <ul>
+                    <li>
+                        <a href="./index.html"> Connexion</a>
+                    </li>
+                    <li>
+                        <a href="./index.html"> Inscription</a>
+                    </li>
+
+                </ul>
+            </div>
+
+            <i class="fa-solid fa-user" id="user" onclick="ShowCon()"></i>
+            <i class="fa-solid fa-bars" id="humberger" onclick="showMenu()"></i>
 
 
-    <div class="side_bar">
-        <a href="#" class="icon">
-            <img src="./assets/images/sidebar/caf.png">
-            <span>
+        </nav>
+        <div class="side_bar">
+            <a href="#" class="icon">
+                <img src="./assets/images/sidebar/caf.png">
+                <span>
                 Nos Menus 
             </span>
-        </a>
-        <a href="#" class="icon">
-            <img src="./assets/images/sidebar/hamburger.png">
-            <span>
+            </a>
+            <a href="#" class="icon">
+                <img src="./assets/images/sidebar/hamburger.png">
+                <span>
                 Nos Burgers 
             </span>
-        </a>
-        <a href="# " class="icon ">
-            <img src="./assets/images/sidebar/icons8-frt.png ">
-            <span>
+            </a>
+            <a href="# " class="icon ">
+                <img src="./assets/images/sidebar/icons8-frt.png ">
+                <span>
                 Nos Frittes 
             </span>
-        </a>
-        <a href="# " class="icon ">
-            <img src="./assets/images/sidebar/icons8-kch.png ">
-            <span>
+            </a>
+            <a href="# " class="icon ">
+                <img src="./assets/images/sidebar/icons8-kch.png ">
+                <span>
              Nos Sauces 
             </span>
-        </a>
-        <a href="# " class="icon ">
-            <img src="./assets/images/sidebar/icons8-mc.png ">
-            <span>
+            </a>
+            <a href="# " class="icon ">
+                <img src="./assets/images/sidebar/icons8-mc.png ">
+                <span>
                 Nos Mc 
             </span>
-        </a>
-        <a href="# " class="icon ">
-            <img src="./assets/images/sidebar/icons8-menu.png ">
-            <span>
+            </a>
+            <a href="# " class="icon ">
+                <img src="./assets/images/sidebar/icons8-menu.png ">
+                <span>
                 Nos Menus 
             </span>
-        </a>
-        <a href="# " class="icon ">
-            <img src="./assets/images/sidebar/icons8-soda.png ">
-            <span>
+            </a>
+            <a href="# " class="icon ">
+                <img src="./assets/images/sidebar/icons8-soda.png ">
+                <span>
                 Nos Soda
             </span>
-        </a>
-        <a href="# " class="icon ">
-            <img src="./assets/images/sidebar/icons8-wrap.png ">
-            <span>
+            </a>
+            <a href="# " class="icon ">
+                <img src="./assets/images/sidebar/icons8-wrap.png ">
+                <span>
                 Nos Wrap
             </span>
-        </a>
-        <a href="# " class="icon ">
-            <img src="./assets/images/sidebar/lettu.png ">
-            <span>
+            </a>
+            <a href="# " class="icon ">
+                <img src="./assets/images/sidebar/lettu.png ">
+                <span>
                 Nos Salades
             </span>
-        </a>
-    </div>
+            </a>
+        </div>
+        <div class="content">
+            <div class="card">
+                <img src="./assets/images/slider1.png" alt="image de burgers">
+                <span class="article_name">
+                   Big Mac
+                </span>
+                <span class="article_price">
+                    12.99€
+                </span>
+            </div>
 
+        </div>
+
+
+    </section>
 
 
 
