build product page

--- a/product.html
+++ b/product.html
@@ -123,14 +123,43 @@
             </a>
         </div>
         <div class="content">
-            <div class="card">
-                <img src="./assets/images/slider1.png" alt="image de burgers">
-                <span class="article_name">
+            <div class="row">
+                <div class="card">
+                    <img src="./assets/images/slider1.png" alt="image de burgers">
+                    <span class="article_name">
                    Big Mac
                 </span>
-                <span class="article_price">
+                    <span class="article_price">
                     12.99€
                 </span>
+                </div>
+                <div class="card">
+                    <img src="./assets/images/slider1.png" alt="image de burgers">
+                    <span class="article_name">
+                   Big Mac
+                </span>
+                    <span class="article_price">
+                    12.99€
+                </span>
+                </div>
+                <div class="card">
+                    <img src="./assets/images/slider1.png" alt="image de burgers">
+                    <span class="article_name">
+                   Big Mac
+                </span>
+                    <span class="article_price">
+                    12.99€
+                </span>
+                </div>
+                <div class="card">
+                    <img src="./assets/images/slider1.png" alt="image de burgers">
+                    <span class="article_name">
+                   Big Mac
+                </span>
+                    <span class="article_price">
+                    12.99€
+                </span>
+                </div>
             </div>
 
         </div>
