--- a/product.html
+++ b/product.html
@@ -68,13 +68,13 @@
         </nav>
         <div class="side_bar">
             <a href="#" class="icon">
-                <img src="./assets/images/sidebar/caf.png">
+                <img src="./assets/images/sidebar/caf.png" alt="image de café">
                 <span>
-                Nos Menus 
+                Nos Cafés 
             </span>
             </a>
             <a href="#" class="icon">
-                <img src="./assets/images/sidebar/hamburger.png">
+                <img src="./assets/images/sidebar/hamburger.png" alt="image de burger">
                 <span>
                 Nos Burgers 
             </span>
@@ -123,44 +123,94 @@
             </a>
         </div>
         <div class="content">
-            <div class="row">
-                <div class="card">
-                    <img src="./assets/images/slider1.png" alt="image de burgers">
-                    <span class="article_name">
-                   Big Mac
-                </span>
-                    <span class="article_price">
-                    12.99€
-                </span>
+            <section>
+
+
+            </section>
+            <section>
+                <div class="row">
+                    <div class="card">
+                        <img src="./assets/images/slider1.png" alt="image de burgers">
+                        <span class="article_name">
+                           Big Mac
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/slider1.png" alt="image de burgers">
+                        <span class="article_name">
+                           Big Mac
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/slider1.png" alt="image de burgers">
+                        <span class="article_name">
+                           Big Mac
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/slider1.png" alt="image de burgers">
+                        <span class="article_name">
+                           Big Mac
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
                 </div>
-                <div class="card">
-                    <img src="./assets/images/slider1.png" alt="image de burgers">
-                    <span class="article_name">
-                   Big Mac
-                </span>
-                    <span class="article_price">
-                    12.99€
-                </span>
+                <div class="row">
+                    <div class="card">
+                        <img src="./assets/images/burger-2.png" alt="image de burgers">
+                        <span class="article_name">
+                          Chicken
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/burger-2.png" alt="image de burgers">
+                        <span class="article_name">
+                          Chicken
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/burger-2.png" alt="image de burgers">
+                        <span class="article_name">
+                          Chicken
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/burger-2.png" alt="image de burgers">
+                        <span class="article_name">
+                          Chicken
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
                 </div>
-                <div class="card">
-                    <img src="./assets/images/slider1.png" alt="image de burgers">
-                    <span class="article_name">
-                   Big Mac
-                </span>
-                    <span class="article_price">
-                    12.99€
-                </span>
-                </div>
-                <div class="card">
-                    <img src="./assets/images/slider1.png" alt="image de burgers">
-                    <span class="article_name">
-                   Big Mac
-                </span>
-                    <span class="article_price">
-                    12.99€
-                </span>
-                </div>
-            </div>
+
+            </section>
+
+
+
+
+        </div>
 
         </div>
 
