build buger part

--- a/product.html
+++ b/product.html
@@ -204,6 +204,82 @@
                         </span>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="card">
+                        <img src="./assets/images/burger-3.png" alt="image de burgers">
+                        <span class="article_name">
+                          Big Burger
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/burger-3.png" alt="image de burgers">
+                        <span class="article_name">
+                          Big Burger
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/burger-3.png" alt="image de burgers">
+                        <span class="article_name">
+                          Big Burger
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/burger-3.png" alt="image de burgers">
+                        <span class="article_name">
+                          Big Burger
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="card">
+                        <img src="./assets/images/burger-4.png" alt="image de burgers">
+                        <span class="article_name">
+                          Mc Chicken
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/burger-4.png" alt="image de burgers">
+                        <span class="article_name">
+                            Mc Chicken
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/burger-4.png" alt="image de burgers">
+                        <span class="article_name">
+                            Mc Chicken
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/burger-4.png" alt="image de burgers">
+                        <span class="article_name">
+                            Mc Chicken
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                </div>
 
             </section>
 
