build buger part

--- a/product.html
+++ b/product.html
@@ -67,55 +67,55 @@
 
         </nav>
         <div class="side_bar">
-            <a href="#" class="icon">
+            <a href="#" class="icon" id="1">
                 <img src="./assets/images/sidebar/caf.png" alt="image de café">
                 <span>
                 Nos Cafés 
             </span>
             </a>
-            <a href="#" class="icon">
+            <a href="#" class="icon" id="2">
                 <img src="./assets/images/sidebar/hamburger.png" alt="image de burger">
                 <span>
                 Nos Burgers 
             </span>
             </a>
-            <a href="# " class="icon ">
+            <a href="# " class="icon " id="3">
                 <img src="./assets/images/sidebar/icons8-frt.png ">
                 <span>
                 Nos Frittes 
             </span>
             </a>
-            <a href="# " class="icon ">
+            <a href="# " class="icon  " id="4">
                 <img src="./assets/images/sidebar/icons8-kch.png ">
                 <span>
              Nos Sauces 
             </span>
             </a>
-            <a href="# " class="icon ">
+            <a href="# " class="icon " id="5">
                 <img src="./assets/images/sidebar/icons8-mc.png ">
                 <span>
                 Nos Mc 
             </span>
             </a>
-            <a href="# " class="icon ">
+            <a href="# " class="icon " id="6">
                 <img src="./assets/images/sidebar/icons8-menu.png ">
                 <span>
                 Nos Menus 
             </span>
             </a>
-            <a href="# " class="icon ">
+            <a href="# " class="icon " id="7">
                 <img src="./assets/images/sidebar/icons8-soda.png ">
                 <span>
                 Nos Soda
             </span>
             </a>
-            <a href="# " class="icon ">
+            <a href="# " class="icon " id="8">
                 <img src="./assets/images/sidebar/icons8-wrap.png ">
                 <span>
                 Nos Wrap
             </span>
             </a>
-            <a href="# " class="icon ">
+            <a href="# " class="icon " id="9">
                 <img src="./assets/images/sidebar/lettu.png ">
                 <span>
                 Nos Salades
@@ -127,7 +127,7 @@
 
 
             </section>
-            <section>
+            <section id="2">
                 <div class="row">
                     <div class="card">
                         <img src="./assets/images/slider1.png" alt="image de burgers">
