product page ok for me

--- a/product.html
+++ b/product.html
@@ -141,11 +141,11 @@
                     <div class="card">
                         <img src="./assets/images/slider1.png" alt="image de burgers">
                         <span class="article_name">
-                           Big Mac
-                        </span>
+                               Big Mac
+                            </span>
                         <span class="article_price">
-                            12.99€
-                        </span>
+                                12.99€
+                            </span>
                     </div>
                     <div class="card">
                         <img src="./assets/images/slider1.png" alt="image de burgers">
@@ -165,39 +165,10 @@
                             12.99€
                         </span>
                     </div>
-                </div>
-                <div class="row">
                     <div class="card">
-                        <img src="./assets/images/burger-2.png" alt="image de burgers">
+                        <img src="./assets/images/slider1.png" alt="image de burgers">
                         <span class="article_name">
-                          Chicken
-                        </span>
-                        <span class="article_price">
-                            12.99€
-                        </span>
-                    </div>
-                    <div class="card">
-                        <img src="./assets/images/burger-2.png" alt="image de burgers">
-                        <span class="article_name">
-                          Chicken
-                        </span>
-                        <span class="article_price">
-                            12.99€
-                        </span>
-                    </div>
-                    <div class="card">
-                        <img src="./assets/images/burger-2.png" alt="image de burgers">
-                        <span class="article_name">
-                          Chicken
-                        </span>
-                        <span class="article_price">
-                            12.99€
-                        </span>
-                    </div>
-                    <div class="card">
-                        <img src="./assets/images/burger-2.png" alt="image de burgers">
-                        <span class="article_name">
-                          Chicken
+                           Big Mac
                         </span>
                         <span class="article_price">
                             12.99€
@@ -206,6 +177,62 @@
                 </div>
                 <div class="row">
                     <div class="card">
+                        <img src="./assets/images/burger-2.png" alt="image de burgers">
+                        <span class="article_name">
+                          Chicken
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/burger-2.png" alt="image de burgers">
+                        <span class="article_name">
+                          Chicken
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/burger-2.png" alt="image de burgers">
+                        <span class="article_name">
+                          Chicken
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/burger-2.png" alt="image de burgers">
+                        <span class="article_name">
+                          Chicken
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/images/burger-2.png" alt="image de burgers">
+                        <span class="article_name">
+                          Chicken
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="card">
+                        <img src="./assets/images/burger-3.png" alt="image de burgers">
+                        <span class="article_name">
+                          Big Burger
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
+                    <div class="card">
                         <img src="./assets/images/burger-3.png" alt="image de burgers">
                         <span class="article_name">
                           Big Burger
@@ -243,6 +270,15 @@
                     </div>
                 </div>
                 <div class="row">
+                    <div class="card">
+                        <img src="./assets/images/burger-4.png" alt="image de burgers">
+                        <span class="article_name">
+                          Mc Chicken
+                        </span>
+                        <span class="article_price">
+                            12.99€
+                        </span>
+                    </div>
                     <div class="card">
                         <img src="./assets/images/burger-4.png" alt="image de burgers">
                         <span class="article_name">
