--- a/commander.html
+++ b/commander.html
@@ -26,13 +26,13 @@
                         <a href="./index.html"> Nous restaurants</a>
                     </li>
                     <li>
-                        <a href="./index.html"> Nos produits </a>
+                        <a href="./product.html"> Nos produits </a>
                     </li>
                     <li>
-                        <a href="#cta"> Blog</a>
+                        <a href="./blog.html"> Blog</a>
                     </li>
                     <li>
-                        <a href="#cta"> Contact</a>
+                        <a href="#"> Contact</a>
                     </li>
                     <li>
                         <a href="#cta"> |</a>
@@ -44,7 +44,7 @@
                     </li>
 
                     <button onclick="location.href='./connexion.html'" class="button-warning" id="button-nav">Se connecter</button>
-                    <button class="button-success" id="button-nav">Commander</button>
+                    <button onclick="location.href='./commander.html'" class="button-success" id="button-nav">Commander</button>
 
                 </ul>
             </div>
