--- a/connexion.html
+++ b/connexion.html
@@ -26,10 +26,13 @@
                         <a href="./index.html"> Nous restaurants</a>
                     </li>
                     <li>
-                        <a href="./index.html"> Nos produits </a>
+                        <a href="./product.html"> Nos produits </a>
                     </li>
                     <li>
-                        <a href="#cta"> Contact</a>
+                        <a href="./blog.html"> Blog</a>
+                    </li>
+                    <li>
+                        <a href="#"> Contact</a>
                     </li>
                     <li>
                         <a href="#cta"> |</a>
