responsive page product

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     <section id="animate_card" class="animate_card">
 
-        <div class="row">
+        <div class="row_animate_card">
             <div class="animate_card-col" id="first-section">
                 <img src="./assets/images/slider1.png" alt="slider1">
                 <h3>Decouvrez nos inccontournables</h3>
