responsive page product

--- a/product.html
+++ b/product.html
@@ -339,6 +339,8 @@
 
 
     <script src="./assets/scripts/sidebar.js "></script>
+    <script src="./assets/scripts/menu.js"></script>
+
 
 </body>
 
