fixed error in rows

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                 <i class="fas fa-times" onclick="hideCon()"></i>
                 <ul>
                     <li>
-                        <a href="./index.html"> Connexion</a>
+                        <a href="./connexion.html"> Connexion</a>
                     </li>
                     <li>
-                        <a href="./index.html"> Inscription</a>
+                        <a href="./inscription.html"> Inscription</a>
                     </li>
 
                 </ul>
@@ -131,7 +131,7 @@
             carrière exceptionnelle. Nous sommes excités de vous présenter notre nouvelle collaboration qui offrira une expérience inoubliable pour les fans de la NBA et de McDonald's. Restez à l'écoute pour plus d'informations sur les prochains événements
             et produits! Cordialement, L'équipe NBA & McDonald's.</p>
 
-        <div class="row">
+        <div class="row_layers">
             <div class="layers-col">
                 <img class="img-layers" src="./assets/images/antony.jpeg">
                 <div class="layer">
