--- a/commander.html
+++ b/commander.html
@@ -52,10 +52,10 @@
                 <i class="fas fa-times" onclick="hideCon()"></i>
                 <ul>
                     <li>
-                        <a href="./index.html"> Connexion</a>
+                        <a href="./connexion.html"> Connexion</a>
                     </li>
                     <li>
-                        <a href="./index.html"> Inscription</a>
+                        <a href="./inscription.html"> Inscription</a>
                     </li>
 
                 </ul>
