--- a/product.html
+++ b/product.html
@@ -67,16 +67,10 @@
 
         </nav>
         <div class="side_bar">
-            <a href="#" class="icon" id="2">
+            <a href="#" class="icon" id="1">
                 <img src="./assets/images/sidebar/hamburger.png" alt="image de burger">
                 <span>
                 Nos Burgers 
-            </span>
-            </a>
-            <a href="#" class="icon" id="1">
-                <img src="./assets/images/sidebar/caf.png" alt="image de café">
-                <span>
-                Nos Cafés 
             </span>
             </a>
             <a href="# " class="icon " id="3">
@@ -85,6 +79,13 @@
                 Nos Frittes 
             </span>
             </a>
+            <a href="#" class="icon" id="2">
+                <img src="./assets/images/sidebar/caf.png" alt="image de café">
+                <span>
+                Nos Cafés 
+            </span>
+            </a>
+
             <a href="# " class="icon  " id="4">
                 <img src="./assets/images/sidebar/icons8-kch.png ">
                 <span>
@@ -128,6 +129,10 @@
 
             </section>
             <section id="2">
+                <div style="color:gray;">
+                    <h1>Nos Burger</h1>
+                    <p>Au fil des décennies, la liste des burgers McDo s’est étoffée, pour le plus grand plaisir des amateurs de nouvelles saveurs. Aujourd’hui, les burgers McDonald’s comblent toutes les faims et toutes les envies !</p>
+                </div>
                 <div class="row">
                     <div class="card">
                         <img src="./assets/images/slider1.png" alt="image de burgers">
